#839 | 1) Modified getAllHeaders and getAllDescriptions in HeaderCreator to accept Mode parameter. 2) Made getStrategy and generateConceptFields static in AbstractHeaders to avoid circular dependency 3) Modified getSampleImportFile method in ImportController to accept encounterUploadMode param and getSampleImportFile method to handle locations and encounters file 4) Added EHC , EHS , EHSF , EIS , EUM , Mode , SVS and UVDS to support encounter/program encounter headers
Signed-off-by: Om Bhardwaj <115864495+ombhardwajj@users.noreply.github.com>